--- a/libags.sym.in
+++ b/libags.sym.in
@@ -137,6 +137,26 @@ ags_log_add_message
 ags_log_get_messages
 ags_log_get_instance
 ags_log_new
+ags_regex_util_execute
+ags_regex_util_compile
+ags_regex_util_execute
+ags_regex_util_get_type
+ags_regex_util_compile_flags_get_type
+ags_regex_util_execute_flags_get_type
+ags_regex_util_error_quark
+ags_regex_util_alloc
+ags_regex_util_copy
+ags_regex_util_free
+ags_regex_util_get_app_encoding
+ags_regex_util_get_encoding
+ags_regex_util_compile
+ags_regex_util_match_alloc
+ags_regex_util_match_copy
+ags_regex_util_match_free
+ags_regex_util_match_get_offset
+ags_regex_util_execute
+ags_regex_util_execute_unichar
+ags_regex_util_execute_unichar2
 ags_regcomp
 ags_regexec
 ags_complex_get_type
