AgsFileDialog and AgsFileWidget prototype

--- a/Makefile.am
+++ b/Makefile.am
@@ -2477,6 +2477,8 @@ libags_gui_h_sources = \
 	ags/widget/ags_dial.h \
 	ags/widget/ags_expander.h \
 	ags/widget/ags_expander_set.h \
+	ags/widget/ags_file_dialog.h \
+	ags/widget/ags_file_widget.h \
 	ags/widget/ags_indicator.h \
 	ags/widget/ags_led.h \
 	ags/widget/ags_led_array.h \
@@ -2502,6 +2504,8 @@ libags_gui_c_sources = \
 	ags/widget/ags_dial.c \
 	ags/widget/ags_expander.c \
 	ags/widget/ags_expander_set.c \
+	ags/widget/ags_file_dialog.c \
+	ags/widget/ags_file_widget.c \
 	ags/widget/ags_indicator.c \
 	ags/widget/ags_led.c \
 	ags/widget/ags_led_array.c \
