--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -39,6 +39,8 @@ ags_scrolled_level_box_get_type
 ags_scrolled_level_box_get_scrolled_window
 ags_scrolled_level_box_get_level_box
 ags_scrolled_level_box_new
+ags_file_dialog_get_type
+ags_file_dialog_new
 ags_led_array_get_type
 ags_led_array_get_segment_width
 ags_led_array_set_segment_width
@@ -218,6 +220,19 @@ ags_scrolled_piano_new
 ags_scrolled_scale_box_get_type
 ags_scrolled_scale_box_get_scrolled_window
 ags_scrolled_scale_box_new
+ags_file_widget_get_type
+ags_file_widget_test_flags
+ags_file_widget_set_flags
+ags_file_widget_unset_flags
+ags_file_widget_test_file_action
+ags_file_widget_set_file_action
+ags_file_widget_add_location
+ags_file_widget_remove_location
+ags_file_widget_add_bookmark
+ags_file_widget_remove_bookmark
+ags_file_widget_refresh
+ags_file_widget_create_dir
+ags_file_widget_new
 ags_scale_get_type
 ags_scale_set_control_name
 ags_scale_get_control_name
