--- a/ags/meson.build
+++ b/ags/meson.build
@@ -853,6 +853,9 @@ libags_gui_sources = files(
   'widget/ags_dial.c',
   'widget/ags_expander.c',
   'widget/ags_expander_set.c',
+  'widget/ags_file_dialog.c',
+  'widget/ags_file_widget.c',
+  'widget/ags_icon_link.c',
   'widget/ags_indicator.c',
   'widget/ags_led_array.c',
   'widget/ags_led.c',
@@ -2041,6 +2044,9 @@ libags_gui_widget_headers = [
   'widget/ags_dial.h',
   'widget/ags_level_box.h',
   'widget/ags_scale_box.h',
+  'widget/ags_file_dialog.h',
+  'widget/ags_file_widget.h',
+  'widget/ags_icon_link.h',
   'widget/ags_indicator.h',
   'widget/ags_level.h',
   'widget/ags_ruler.h',
