--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -217,6 +217,15 @@ ags_scrolled_piano_get_type
 ags_scrolled_piano_get_scrolled_window
 ags_scrolled_piano_get_piano
 ags_scrolled_piano_new
+ags_icon_link_get_type
+ags_icon_link_get_icon
+ags_icon_link_set_icon
+ags_icon_link_get_action
+ags_icon_link_set_action
+ags_icon_link_get_link_text
+ags_icon_link_set_link_text
+ags_icon_link_clicked
+ags_icon_link_new
 ags_scrolled_scale_box_get_type
 ags_scrolled_scale_box_get_scrolled_window
 ags_scrolled_scale_box_new
@@ -228,6 +237,7 @@ ags_file_widget_test_file_action
 ags_file_widget_set_file_action
 ags_file_widget_add_location
 ags_file_widget_remove_location
+ags_file_widget_location_callback
 ags_file_widget_add_bookmark
 ags_file_widget_remove_bookmark
 ags_file_widget_refresh
