--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -179,6 +179,16 @@ ags_cartesian_linear_y_label_func
 ags_cartesian_reallocate_label
 ags_cartesian_fill_label
 ags_cartesian_new
+ags_input_dialog_get_type
+ags_input_dialog_test_flags
+ags_input_dialog_set_flags
+ags_input_dialog_unset_flags
+ags_input_dialog_set_text
+ags_input_dialog_set_spin_button_label
+ags_input_dialog_get_entry
+ags_input_dialog_get_spin_button
+ags_input_dialog_response
+ags_input_dialog_new
 ags_tempo_get_type
 ags_tempo_set_control_name
 ags_tempo_get_control_name
@@ -218,8 +228,11 @@ ags_scrolled_piano_get_scrolled_window
 ags_scrolled_piano_get_piano
 ags_scrolled_piano_new
 ags_icon_link_get_type
-ags_icon_link_get_icon
-ags_icon_link_set_icon
+ags_icon_link_test_flags
+ags_icon_link_set_flags
+ags_icon_link_unset_flags
+ags_icon_link_get_icon_name
+ags_icon_link_set_icon_name
 ags_icon_link_get_action
 ags_icon_link_set_action
 ags_icon_link_get_link_text
@@ -237,7 +250,6 @@ ags_file_widget_test_file_action
 ags_file_widget_set_file_action
 ags_file_widget_add_location
 ags_file_widget_remove_location
-ags_file_widget_location_callback
 ags_file_widget_add_bookmark
 ags_file_widget_remove_bookmark
 ags_file_widget_refresh
