getter/setter of file widget

--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -250,10 +250,23 @@ ags_file_widget_set_flags
 ags_file_widget_unset_flags
 ags_file_widget_test_file_action
 ags_file_widget_set_file_action
+ags_file_widget_get_recently_used
+ags_file_widget_get_recently_used_filename
+ags_file_widget_set_recently_used_filename
+ags_file_widget_read_recently_used
+ags_file_widget_write_recently_used
+ags_file_widget_get_location
 ags_file_widget_add_location
 ags_file_widget_remove_location
+ags_file_widget_get_bookmark
 ags_file_widget_add_bookmark
 ags_file_widget_remove_bookmark
+ags_file_widget_get_bookmark_filename
+ags_file_widget_set_bookmark_filename
+ags_file_widget_read_bookmark
+ags_file_widget_write_bookmark
+ags_file_widget_get_filename
+ags_file_widget_get_filenames
 ags_file_widget_refresh
 ags_file_widget_create_dir
 ags_file_widget_new
@@ -343,3 +356,4 @@ ags_led_set_active
 ags_led_new
 ags_widget_cclosure_marshal_VOID__STRING_INT
 ags_widget_cclosure_marshal_VOID__OBJECT_INT
+ags_widget_cclosure_marshal_OBJECT__VOID
