--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -250,6 +250,22 @@ ags_file_widget_set_flags
 ags_file_widget_unset_flags
 ags_file_widget_test_file_action
 ags_file_widget_set_file_action
+ags_file_widget_set_default_bundle
+ags_file_widget_get_default_bundle
+ags_file_widget_set_home_path
+ags_file_widget_get_home_path
+ags_file_widget_set_generic_path
+ags_file_widget_get_generic_path
+ags_file_widget_set_default_path
+ags_file_widget_get_default_path
+ags_file_widget_set_current_path
+ags_file_widget_get_current_path
+ags_file_widget_set_recently_used_filename
+ags_file_widget_get_recently_used_filename
+ags_file_widget_set_bookmark_filename
+ags_file_widget_get_bookmark_filename
+ags_file_widget_set_file_magic_executable
+ags_file_widget_get_file_magic_executable
 ags_file_widget_get_recently_used
 ags_file_widget_get_recently_used_filename
 ags_file_widget_set_recently_used_filename
