implemented response of file dialog

--- a/libags_gui.sym.in
+++ b/libags_gui.sym.in
@@ -40,6 +40,8 @@ ags_scrolled_level_box_get_scrolled_window
 ags_scrolled_level_box_get_level_box
 ags_scrolled_level_box_new
 ags_file_dialog_get_type
+ags_file_dialog_get_file_widget
+ags_file_dialog_response
 ags_file_dialog_new
 ags_led_array_get_type
 ags_led_array_get_segment_width
