--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -24,10 +24,12 @@ if WITH_SYSTEM_TESTS
 libags_installcheck_programs = \
 	ags_check_system_buffer_util_test \
 	ags_check_system_complex_test \
+	ags_check_system_endian_test \
 	ags_check_system_conversion_test \
 	ags_check_system_function_test \
 	ags_check_system_log_test \
 	ags_check_system_math_util_test \
+	ags_check_system_regex_util_test \
 	ags_check_system_solver_matrix_test \
 	ags_check_system_solver_vector_test \
 	ags_check_system_solver_polynomial_test \
@@ -322,6 +324,13 @@ ags_check_system_conversion_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_conversion_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_conversion_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lrt -lm $(LIBXML2_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS)
 
+# endian unit test
+ags_check_system_endian_test_SOURCES = ags/test/lib/ags_endian_test.c
+ags_check_system_endian_test_CFLAGS = $(CFLAGS) $(LIBXML2_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS)
+ags_check_system_endian_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_endian_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_endian_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lrt -lm $(LIBXML2_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS)
+
 # function unit test
 ags_check_system_function_test_SOURCES = ags/test/lib/ags_function_test.c
 ags_check_system_function_test_CFLAGS = $(CFLAGS) $(LIBXML2_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS)
@@ -342,6 +351,13 @@ ags_check_system_math_util_test_CFLAGS = $(CFLAGS) $(LIBXML2_CFLAGS) $(GOBJECT_C
 ags_check_system_math_util_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_math_util_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_math_util_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lrt -lm $(LIBXML2_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS)
+
+# regex util unit test
+ags_check_system_regex_util_test_SOURCES = ags/test/lib/ags_regex_util_test.c
+ags_check_system_regex_util_test_CFLAGS = $(CFLAGS) $(LIBXML2_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS)
+ags_check_system_regex_util_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_regex_util_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_regex_util_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lrt -lm $(LIBXML2_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS)
 
 # solver matrix unit test
 ags_check_system_solver_matrix_test_SOURCES = ags/test/lib/ags_solver_matrix_test.c
@@ -2035,9 +2051,11 @@ ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_insta
 	./ags_check_system_buffer_util_test
 	./ags_check_system_complex_test
 	./ags_check_system_conversion_test
+	./ags_check_system_endian_test
 	./ags_check_system_function_test
 	./ags_check_system_log_test
 	./ags_check_system_math_util_test
+	./ags_check_system_regex_util_test
 	./ags_check_system_solver_matrix_test
 	./ags_check_system_solver_vector_test
 	./ags_check_system_solver_polynomial_test
