--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -30,6 +30,7 @@ libags_installcheck_programs = \
 	ags_check_system_log_test \
 	ags_check_system_math_util_test \
 	ags_check_system_regex_util_test \
+	ags_check_system_string_util_test \
 	ags_check_system_solver_matrix_test \
 	ags_check_system_solver_vector_test \
 	ags_check_system_solver_polynomial_test \
@@ -358,6 +359,13 @@ ags_check_system_regex_util_test_CFLAGS = $(CFLAGS) $(LIBXML2_CFLAGS) $(GOBJECT_
 ags_check_system_regex_util_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_regex_util_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_regex_util_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lrt -lm $(LIBXML2_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS)
+
+# string util unit test
+ags_check_system_string_util_test_SOURCES = ags/test/lib/ags_string_util_test.c
+ags_check_system_string_util_test_CFLAGS = $(CFLAGS) $(LIBXML2_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS)
+ags_check_system_string_util_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_string_util_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_string_util_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lrt -lm $(LIBXML2_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS)
 
 # solver matrix unit test
 ags_check_system_solver_matrix_test_SOURCES = ags/test/lib/ags_solver_matrix_test.c
@@ -2056,6 +2064,7 @@ ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_insta
 	./ags_check_system_log_test
 	./ags_check_system_math_util_test
 	./ags_check_system_regex_util_test
+	./ags_check_system_string_util_test
 	./ags_check_system_solver_matrix_test
 	./ags_check_system_solver_vector_test
 	./ags_check_system_solver_polynomial_test
