--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -1,4 +1,4 @@
-# Copyright (C) 2005-2023 Joel Kraehemann
+# Copyright (C) 2005-2024 Joel Kraehemann
 # 
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
@@ -40,6 +40,7 @@ libags_installcheck_programs = \
 	ags_check_system_application_context_test \
 	ags_check_system_config_test \
 	ags_check_system_connectable_test \
+	ags_check_system_main_loop_test \
 	ags_check_system_soundcard_test \
 	ags_check_system_concurrency_provider_test \
 	ags_check_system_destroy_worker_test \
@@ -429,6 +430,13 @@ ags_check_system_connectable_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND
 ags_check_system_connectable_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_connectable_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_connectable_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lags_audio -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+
+# main loop unit test
+ags_check_system_main_loop_test_SOURCES = ags/test/object/ags_main_loop_test.c
+ags_check_system_main_loop_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_main_loop_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_main_loop_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_main_loop_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lags_audio -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
 # soundcard unit test
 ags_check_system_soundcard_test_SOURCES = ags/test/object/ags_soundcard_test.c
@@ -2074,6 +2082,7 @@ ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_insta
 	./ags_check_system_application_context_test
 	./ags_check_system_config_test
 	./ags_check_system_connectable_test
+	./ags_check_system_main_loop_test
 	./ags_check_system_soundcard_test
 	./ags_check_system_concurrency_provider_test
 	./ags_check_system_destroy_worker_test
