--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -41,6 +41,7 @@ libags_installcheck_programs = \
 	ags_check_system_config_test \
 	ags_check_system_connectable_test \
 	ags_check_system_main_loop_test \
+	ags_check_system_mutable_test \
 	ags_check_system_soundcard_test \
 	ags_check_system_concurrency_provider_test \
 	ags_check_system_destroy_worker_test \
@@ -431,6 +432,13 @@ ags_check_system_connectable_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_connectable_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_connectable_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lags_audio -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
+# countable unit test
+ags_check_system_countable_test_SOURCES = ags/test/object/ags_countable_test.c
+ags_check_system_countable_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_countable_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_countable_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_countable_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+
 # main loop unit test
 ags_check_system_main_loop_test_SOURCES = ags/test/object/ags_main_loop_test.c
 ags_check_system_main_loop_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
@@ -438,12 +446,33 @@ ags_check_system_main_loop_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_main_loop_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_main_loop_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lcunit -lags_audio -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
+# mutable unit test
+ags_check_system_mutable_test_SOURCES = ags/test/object/ags_mutable_test.c
+ags_check_system_mutable_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_mutable_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_mutable_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_mutable_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+
+# seekable unit test
+ags_check_system_seekable_test_SOURCES = ags/test/object/ags_seekable_test.c
+ags_check_system_seekable_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_seekable_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_seekable_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_seekable_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+
 # soundcard unit test
 ags_check_system_soundcard_test_SOURCES = ags/test/object/ags_soundcard_test.c
 ags_check_system_soundcard_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
 ags_check_system_soundcard_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_soundcard_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_soundcard_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+
+# tactable unit test
+ags_check_system_tactable_test_SOURCES = ags/test/object/ags_tactable_test.c
+ags_check_system_tactable_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_tactable_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_tactable_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_tactable_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
 # concurrency provider unit test
 ags_check_system_concurrency_provider_test_SOURCES = ags/test/thread/ags_concurrency_provider_test.c
@@ -2082,8 +2111,12 @@ ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_insta
 	./ags_check_system_application_context_test
 	./ags_check_system_config_test
 	./ags_check_system_connectable_test
+	./ags_check_system_countable_test
 	./ags_check_system_main_loop_test
+	./ags_check_system_mutable_test
+	./ags_check_system_seekable_test
 	./ags_check_system_soundcard_test
+	./ags_check_system_tactable_test
 	./ags_check_system_concurrency_provider_test
 	./ags_check_system_destroy_worker_test
 	./ags_check_system_generic_main_loop_test
