added sequencer tests

--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -43,6 +43,7 @@ libags_installcheck_programs = \
 	ags_check_system_main_loop_test \
 	ags_check_system_mutable_test \
 	ags_check_system_soundcard_test \
+	ags_check_system_sequencer_test \
 	ags_check_system_concurrency_provider_test \
 	ags_check_system_destroy_worker_test \
 	ags_check_system_generic_main_loop_test \
@@ -466,6 +467,13 @@ ags_check_system_soundcard_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_
 ags_check_system_soundcard_test_CPPFLAGS = $(AGS_FEATURES)
 ags_check_system_soundcard_test_LDFLAGS = -pthread $(LDFLAGS)
 ags_check_system_soundcard_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
+
+# sequencer unit test
+ags_check_system_sequencer_test_SOURCES = ags/test/object/ags_sequencer_test.c
+ags_check_system_sequencer_test_CFLAGS = $(CFLAGS) $(LIBAO_CFLAGS) $(LIBASOUND2_CFLAGS) $(LIBXML2_CFLAGS) $(SNDFILE_CFLAGS) $(LIBINSTPATCH_CFLAGS) $(JSON_GLIB_CFLAGS) $(GOBJECT_CFLAGS) $(LIBSOUP_CFLAGS) $(JACK_CFLAGS) $(GSTREAMER_CFLAGS)
+ags_check_system_sequencer_test_CPPFLAGS = $(AGS_FEATURES)
+ags_check_system_sequencer_test_LDFLAGS = -pthread $(LDFLAGS)
+ags_check_system_sequencer_test_LDADD = -L$(DESTDIR)/$(libdir) -lags -lags_thread -lags_server -lags_audio -lcunit -lrt -lm $(LIBAO_LIBS) $(LIBASOUND2_LIBS) $(LIBXML2_LIBS) $(SNDFILE_LIBS) $(LIBINSTPATCH_LIBS) $(JSON_GLIB_LIBS) $(GOBJECT_LIBS) $(LIBSOUP_LIBS) $(JACK_LIBS) $(GSTREAMER_LIBS)
 
 # tactable unit test
 ags_check_system_tactable_test_SOURCES = ags/test/object/ags_tactable_test.c
@@ -2116,6 +2124,7 @@ ags-check-system-unit-test: $(libags_installcheck_programs) $(libags_audio_insta
 	./ags_check_system_mutable_test
 	./ags_check_system_seekable_test
 	./ags_check_system_soundcard_test
+	./ags_check_system_sequencer_test
 	./ags_check_system_tactable_test
 	./ags_check_system_concurrency_provider_test
 	./ags_check_system_destroy_worker_test
