--- a/unit-system-tests.mk.am
+++ b/unit-system-tests.mk.am
@@ -40,6 +40,7 @@ libags_installcheck_programs = \
 	ags_check_system_application_context_test \
 	ags_check_system_config_test \
 	ags_check_system_connectable_test \
+	ags_check_system_countable_test \
 	ags_check_system_main_loop_test \
 	ags_check_system_mutable_test \
 	ags_check_system_soundcard_test \
