updated doc URLs in scripts

--- a/Makefile.am
+++ b/Makefile.am
@@ -3578,9 +3578,9 @@ fix-local-html:
 	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@$(GOBJECT_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-html@$(LIBAGS_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@$(GOBJECT_API_DOC)@g' {} \;
-	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk3@$(GTK_API_DOC)@g' {} \;
+	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk4@$(GTK_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@$(GOBJECT_API_DOC)@g' {} \;
-	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk3@$(GTK_API_DOC)@g' {} \;
+	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk4@$(GTK_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-html@$(LIBAGS_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-audio-html@$(LIBAGS_AUDIO_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-gui-html@$(LIBAGS_GUI_API_DOC)@g' {} \;
@@ -3590,9 +3590,9 @@ fix-local-html-bsd:
 	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gobject@$(GOBJECT_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../libags-html@$(LIBAGS_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gobject@$(GOBJECT_API_DOC)@g' {} \;
-	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gtk3@$(GTK_API_DOC)@g' {} \;
+	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gtk4@$(GTK_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gobject@$(GOBJECT_API_DOC)@g' {} \;
-	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gtk3@$(GTK_API_DOC)@g' {} \;
+	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../gtk4@$(GTK_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../libags-html@$(LIBAGS_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../libags-audio-html@$(LIBAGS_AUDIO_API_DOC)@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i '' -e 's@../libags-gui-html@$(LIBAGS_GUI_API_DOC)@g' {} \;
@@ -3602,13 +3602,13 @@ fix-online-books-html:
 	find $(top_builddir)/html/ -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's/\/usr\/share\/icons\/Adwaita\/32x32\/apps/..\/images/g' {} \;
 
 fix-online-html:
-	find $(top_builddir)/docs/reference/libags/libags-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://developer.gnome.org/gobject/stable@g' {} \;
-	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://developer.gnome.org/gobject/stable@g' {} \;
+	find $(top_builddir)/docs/reference/libags/libags-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://docs.gtk.org/gobject/@g' {} \;
+	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://docs.gtk.org/gobject/@g' {} \;
 	find $(top_builddir)/docs/reference/libags-audio/libags-audio-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-html@../libags@g' {} \;
-	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://developer.gnome.org/gobject/stable@g' {} \;
-	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk3@https://developer.gnome.org/gtk3/stable@g' {} \;
-	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://developer.gnome.org/gobject/stable@g' {} \;
-	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk3@https://developer.gnome.org/gtk3/stable@g' {} \;
+	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://docs.gtk.org/gobject/@g' {} \;
+	find $(top_builddir)/docs/reference/libags-gui/libags-gui-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk4@https://docs.gtk.org/gtk4/@g' {} \;
+	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gobject@https://docs.gtk.org/gobject/@g' {} \;
+	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../gtk4@https://docs.gtk.org/gtk4/@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-html@../libags@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-audio-html@../libags-audio@g' {} \;
 	find $(top_builddir)/docs/reference/libgsequencer/libgsequencer-html -name "*.html" -type f -exec $(AM_V_GEN)sed -i 's@../libags-gui-html@../libags-gui@g' {} \;
