--- a/docs/reference/libags-gui/Makefile.in
+++ b/docs/reference/libags-gui/Makefile.in
@@ -142,7 +142,8 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = docs/reference/libags-gui
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/ags-docs-api.m4 \
+am__aclocal_m4_deps = $(top_srcdir)/m4/ags-def.m4 \
+	$(top_srcdir)/m4/ags-docs-api.m4 \
 	$(top_srcdir)/m4/ags-docs-books.m4 \
 	$(top_srcdir)/m4/ags-listings.m4 \
 	$(top_srcdir)/m4/ags-marshallers.m4 \
@@ -825,9 +826,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am $(srcdir)/./gtk-doc.make $(am__con
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu docs/reference/libags-gui/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign docs/reference/libags-gui/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu docs/reference/libags-gui/Makefile
+	  $(AUTOMAKE) --foreign docs/reference/libags-gui/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
